SESSION1
C:\Users\abc>python x.py
hello world
python

C:\Users\abc>python x.py
hello world
python
5

C:\Users\abc>python
Python 3.8.3 (default, Jul  2 2020, 17:30:36) [MSC v.1916 64 bit (AMD64)] :: Anaconda, Inc. on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> x="hello"
>>> print(x)
hello
>>> type(x)
<class 'str'>
>>> x=2.7
>>> type(x)
<class 'float'>
>>> x=[nikhil,11th,2503]
  File "<stdin>", line 1
    x=[nikhil,11th,2503]
                ^
SyntaxError: invalid syntax
>>> x=[ "nikhil", "11th", "2503"]
>>> x[2]
'2503'
>>> x[-1:]
['2503']
>>> x=[[1, "nikhil" , "1st"] ,[ "2" , "priyansh" , "2nd"] ,[ 3, "aryan" , "3rd"]]
>>> len(x)
3
>>> x[1][1]
'priyansh'
>>> x[1:]
[['2', 'priyansh', '2nd'], [3, 'aryan', '3rd']]
